Inline test setup to avoid polluting the manual
I would really like to rewrite the page to follow the algorithm template,
with a syntax section and a proper example section with real setup and a nice image.
Deferring that to productising these procs.